--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,14 @@
   "name": "SmartCompare AI",
   "version": "1.0.0",
   "description": "An intelligent e-commerce comparison tool powered by Gemini.",
-  "permissions": ["activeTab", "storage", "scripting"],
-  "host_permissions": ["https://*/*"],
+  "permissions": [
+    "activeTab",
+    "storage",
+    "scripting"
+  ],
+  "host_permissions": [
+    "https://*/*"
+  ],
   "action": {
     "default_title": "Open SmartCompare"
   },
