--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
     "@google/genai": "^1.40.0",
-    "lucide-react": "^0.563.0"
+    "lucide-react": "^0.563.0",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.3",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
