--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vite": "^7.3.1",
     "@vitejs/plugin-react": "^5.1.3",
     "path": "^0.12.7",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
